--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ http://www.tooplate.com/view/2076-ALTAIR
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h1>ALTAIR RESTAURANT</h1>
+				<h1>ALTAIR Ресторан</h1>
 				<h2>CLEAN &amp; SIMPLE DESIGN</h2>
 				<a href="#gallery" class="smoothScroll btn btn-default">LEARN MORE</a>
 			</div>
@@ -73,38 +73,39 @@ http://www.tooplate.com/view/2076-ALTAIR
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-				<h1 class="heading">Food Gallery</h1>
+				<h1 class="heading">Галерея еды</h1>
 				<hr>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
 				<a href="images/gallery-img1.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img1.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Prawn</h3>
-					<span>Seafood / Shrimp / Lemon</span>
+					<h3>Лимонно-розмариновые овощи</h3>
+					<span>Морепродукты / Креветки /Лимон</span>
+					
 				</div>
 				<a href="images/gallery-img2.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img2.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Vegetables</h3>
-					<span>Tomato / Rosemary / Lemon</span>
+					<h3>Лимонно-розмариновые овощи</h3>
+					<span>Помидор / Розмарин / Лимон</span>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<a href="images/gallery-img3.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img3.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Bakery</h3>
-					<span>Bread / Rosemary / Orange</span>
+					<h3>Лимонно-розмаринова пекарня</h3>
+					<span>Хлеб/Розмарин  /Апельсин </span>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
 				<a href="images/gallery-img4.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img4.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Salad</h3>
-					<span>Chicken / Rosemary / Green</span>
+					<h3>Лимонно-розмариновый салат</h3>
+					<span> Курица/ Розмарин / Зеленый</span>
 				</div>
 				<a href="images/gallery-img5.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img5.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Pizza</h3>
-					<span>Pasta / Rosemary / Green</span>
+					<h3>Лимонно-Розмариновая Пицца</h3>
+					<span>Макаронные изделия/ Розмарин /Зеленый</span>
 				</div>
 			</div>
 		</div>
@@ -117,40 +118,40 @@ http://www.tooplate.com/view/2076-ALTAIR
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-				<h1 class="heading">Special Menu</h1>
+				<h1 class="heading"<Специальное меню</h1>
 				<hr>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Vegetable ................ <span>$20.50</span></h4>
-				<h5>Chicken / Rosemary / Lemon</h5>
+				<h4> Овощной лимон-розмарин................ <span>$20.50</span></h4>
+				<h5>Курица / Розмарин / Лимон </h5>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Meat ........................... <span>$30.50</span></h4>
-				<h5>Meat / Rosemary / Lemon</h5>
+				<h4>Лимонно-розмариновое мясо ........................... <span>$30.50</span></h4>
+				<h5>Мясо / Розмарин /Лимон </h5>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Pork ........................ <span>$40.75</span></h4>
-				<h5>Pork / Tooplate / Lemon</h5>
+				<h4>Лимонно-розмариновая свинина ........................ <span>$40.75</span></h4>
+				<h5> Свинина / Табличка / Лимон</h5>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Orange-Rosemary Salad .......................... <span>$55.00</span></h4>
-				<h5>Salad / Rosemary / Orange</h5>
+				<h4>Апельсиново-розмариновый салат .......................... <span>$55.00</span></h4>
+				<h5>Салат/ Розмарин / Апельсин</h5>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Squid ...................... <span>$65.00</span></h4>
-				<h5>Squid / Rosemary / Lemon</h5>
+				<h4>Лимонно-розмариновый кальмар ...................... <span>$65.00</span></h4>
+				<h5>Кальмар / Розмарин / Лимон</h5>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Orange-Rosemary Shrimp ........................ <span>$70.50</span></h4>
-				<h5>Shrimp / Rosemary / Orange</h5>
+				<h4> Оранжево-розмариновые креветки........................ <span>$70.50</span></h4>
+				<h5>Креветки / Розмарин / Апельсин</h5>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Prawn ................... <span>$110.75</span></h4>
-				<h5>Chicken / Rosemary / Lemon</h5>
+				<h4>Креветка с лимоном и розмарином ................... <span>$110.75</span></h4>
+				<h5>Курица/ Розмарин / Лимон</h5>
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Seafood ..................... <span>$220.50</span></h4>
-				<h5>Seafood / Rosemary / Lemon</h5>
+				<h4>Лимонно-Розмариновые Морепродукты ..................... <span>$220.50</span></h4>
+				<h5>Морепродукты / Розмарин / Лимон</h5>
 			</div>
 		</div>
 	</div>
@@ -162,23 +163,24 @@ http://www.tooplate.com/view/2076-ALTAIR
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-				<h1 class="heading">Meet ALTAIR chefs</h1>
+				<h1 class="heading<Знакомьтесь с шеф-поварами АЛЬТАИРА</h1>
+				
 				<hr>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
 				<img src="images/team1.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Thanya</h4>
-				<h3>Main Chef</h3>
+				<h4>Таня</h4>
+				<h3>Главный повар</h3>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<img src="images/team2.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Lynda</h4>
-				<h3>Pizza Specialist</h3>
+				<h4>Линда</h4>
+				<h3>Специалист по пицце</h3>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
 				<img src="images/team3.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Jenny Ko</h4>
-				<h3>New Baker</h3>
+				<h4>Дженни Ко</h4>
+				<h3>Новый пекарь</h3>
 			</div>
 		</div>
 	</div>
@@ -190,7 +192,7 @@ http://www.tooplate.com/view/2076-ALTAIR
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10 col-sm-12 text-center">
-				<h1 class="heading">Contact Us</h1>
+				<h1 class="heading">Контакты</h1>
 				<hr>
 			</div>
 			<div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeIn" data-wow-delay="0.9s">
@@ -220,9 +222,9 @@ http://www.tooplate.com/view/2076-ALTAIR
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<h2 class="heading">Contact Info.</h2>
+				<h2 class="heading">Наши контакты.</h2>
 				<div class="ph">
-					<p><i class="fa fa-phone"></i> Phone</p>
+					<p><i class="fa fa-phone"></i> Номер телефона</p>
 					<h4>090-080-0760</h4>
 				</div>
 				<div class="address">
@@ -231,10 +233,10 @@ http://www.tooplate.com/view/2076-ALTAIR
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<h2 class="heading">Open Hours</h2>
-					<p>Sunday <span>10:30 AM - 10:00 PM</span></p>
-					<p>Mon-Fri <span>9:00 AM - 8:00 PM</span></p>
-					<p>Saturday <span>11:30 AM - 10:00 PM</span></p>
+				<h2 class="heading">Открывается</h2>
+					<p>Воскресенье <span>10:30  - 10:00 </span></p>
+					<p>Понедельник-Пятница <span>9:00  - 8:00 </span></p>
+					<p>Суботта <span>11:30  - 10:00 P</span></p>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<h2 class="heading">Follow Us</h2>
